# networking

./: README.md
project/: CMakeLists.txt
project/app/: CMakeLists.txt
project/app/src/: main.cpp
project/client/: CMakeLists.txt
project/client/include/: client.h
project/client/src/: client.cpp
project/server/: CMakeLists.txt
project/server/include/: server.h
project/server/src/: server.cpp
